# accelnet_challenge_sdu

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: state_publisher.launch  stereo_pipeline.launch  task1.launch  task2.launch
resources/meshes/: needle.mtl
resources/segmentation_model_v2/: keras_metadata.pb
resources/segmentation_model_v2/variables/: variables.index
scripts/: ambf_state_publisher  camera_info_publisher  camera_transform_publisher  cnn_mask_generator  cnn_mask_generator_single  marker_publisher  needle_tracker  rectify  task1  task2  truth_mask_generator
src/accelnet_challenge_sdu/: __init__.py  pose.py  rotations.py  segmentation_render.py  segmentation_tensorflow.py
